fix: update styles for react-calendar tiles and weekdays for better visibility and consistency

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,11 +12,36 @@
 }
 
 .react-calendar__tile--active {
-  background-color: "#465fff";
+  background: #465fff !important;
+  border-radius: 5px !important;
 }
+
+.react-calendar__tile--active:hover {
+  background: #3641f5 !important;
+}
+
 .react-calendar__tile--now {
-  background: #12b76a;
+  background: #12b76a !important;
+  border-radius: 5px !important;
 }
+
+.react-calendar__month-view__weekdays {
+  text-transform: none !important;
+  font-family: inherit !important;
+}
+
+.react-calendar__month-view__weekdays abbr {
+  text-decoration: none;
+}
+
+.react-calendar__month-view__weekdays__weekday.react-calendar__month-view__weekdays__weekday--weekend {
+  color: #d10000;
+}
+
+.react-calendar__tile--now abbr {
+  color: white !important;
+}
+
 .react-calendar__navigation__label__labelText {
   font-weight: 600;
 }
